--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.25" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.26" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon alternate" type="image/png" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.25" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.25" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.25" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.26" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.26" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.26" media="screen" />
   </head>
 
   <body>
@@ -55,12 +55,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.25' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.26' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.25' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.25' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.26' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.26' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.25' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.26' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -131,7 +131,7 @@
           <!-- <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button> -->
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
-          <button title="Credits" class="small isolated" style="bottom: 10px; right: 0px; "
+          <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
             @click="ToggleShowInfo(event)">
             <icon class="meeples"></icon>
           </button>
@@ -459,7 +459,7 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
-          <p>These AI puzzles can be quite hard. Can you do solve them faster than your friends?</p>
+          <p>These AI puzzles can be quite hard. Can you solve them faster than your friends?</p>
           <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
             {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
@@ -785,9 +785,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.25" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.26" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.25" type="module"></script>
+    <script src="scripts/facets.js?2.3.26" type="module"></script>
   </body>
 
 </html>
