--- a/generate.html
+++ b/generate.html
@@ -29,12 +29,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="styles/normalize.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.49" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.50" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css" media="screen" />
   </head>
 
   <body>
-    <main id="app" style="display: none; opacity: 0;">
+    <main id="app" style="display: none;">
       <app v-cloak
         :class="{ai: isAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
         @pointerdown="HandleBodyPointerDown($event)"
@@ -51,12 +51,12 @@
             :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
         </preload>
         <link rel="stylesheet"
-          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.49' : ''"
+          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.50' : ''"
           media="screen" />
-        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.49' : ''" media="screen" />
-        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.49' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.50' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.50' : ''" media="screen" />
         <link rel="stylesheet"
-          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.49' : ''"
+          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.50' : ''"
           media="screen" />
         <splash :class="{hide: appStatePageHasLoaded}">
           <icon class="logo giant"></icon>
@@ -282,7 +282,7 @@
             <a class="padded" @click="ShareText('https://bigtentgames.com/facets', '')">Share with friends!</a>
             <a class="padded" href="https://discord.gg/sJ3vG3RHZd" target="_blank">Join our Discord!</a>
             <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
-            <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+            <button class="small highlightText" onclick="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
               <icon class="bmc small highlightBackground"></icon>
               Buy me a coffee!
             </button>
@@ -447,7 +447,7 @@
             <leftright style="margin: 20px 0">
               <a class="padded" :class="{disabled: appStateIsGettingAnonymousGames}"
                 @click="GetRecentAnonymousGames">Refresh</a>
-              <a class="padded" @click="window.open('/game/stats.html', '_blank')">Global Stats</a>
+              <a class="padded" onclick="window.open('/game/stats.html', '_blank')">Global Stats</a>
             </leftright>
 
             <icon v-show="appStateIsGettingAnonymousGames" style="position: relative" class="spinner show"></icon>
@@ -481,7 +481,7 @@
         <modal v-if="appStateShowDailyGames">
           <section>
             <h2>The Daily Facet</h2>
-            <p>These AI puzzles can be quite hard. Can you solve them faster than your friends?</p>
+            <p>These AI puzzles can be quite hard. Can you solve them more quickly than your friends?</p>
             <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
               {{appDataPlayerStats.total}}
               {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
@@ -592,7 +592,7 @@
             </controls>
           </section>
         </modal>
-        <wrapper>
+        <wrapper v-if="!appStateShowMeta">
           <controls>
             <button class="small" id="menu" @pointerup="ToggleShowMeta($event)">
               Menu
@@ -632,7 +632,7 @@
             </button>
           </controls>
         </wrapper>
-        <wrapper class="main" :class="{disabled: appStateSolving}">
+        <wrapper class="main" :class="{disabled: appStateSolving}" v-if="!appStateShowMeta">
           <rotators style="width: calc(3.25 * var(--cardSize))" :class="{pointoutparent: appStateFirstRunGuessingIndex === 4 &&
           isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}">
             <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateTray(1)">
@@ -767,7 +767,8 @@
             </spot>
           </parking>
         </wrapper>
-        <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}" v-if="appStateUsePortraitLayout">
+        <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}"
+          v-if="appStateUsePortraitLayout && !appStateShowMeta">
           <button class="scroller" :class="{disabled: appDataParkingScrollLeft <= 0}"
             @click="ScrollParking($event, 'right')" v-if="vsUseFocus">
             <icon class="chevronleft large"></icon>
@@ -809,8 +810,8 @@
         </wrapper>
       </app>
     </main>
-    <script src="helpers/console-enhancer.js?2.3.49" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.49" type="module"></script>
+    <script src="helpers/console-enhancer.js?2.3.50" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.50" type="module"></script>
   </body>
 
 </html>
