--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="styles/normalize.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.49" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.50" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css" media="screen" />
   </head>
 
@@ -51,12 +51,12 @@
             :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
         </preload>
         <link rel="stylesheet"
-          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.49' : ''"
+          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.50' : ''"
           media="screen" />
-        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.49' : ''" media="screen" />
-        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.49' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.50' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.50' : ''" media="screen" />
         <link rel="stylesheet"
-          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.49' : ''"
+          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.50' : ''"
           media="screen" />
         <splash :class="{hide: appStatePageHasLoaded}">
           <icon class="logo giant"></icon>
@@ -592,7 +592,7 @@
             </controls>
           </section>
         </modal>
-        <wrapper>
+        <wrapper v-if="!appStateShowMeta">
           <controls>
             <button class="small" id="menu" @pointerup="ToggleShowMeta($event)">
               Menu
@@ -632,7 +632,7 @@
             </button>
           </controls>
         </wrapper>
-        <wrapper class="main" :class="{disabled: appStateSolving}">
+        <wrapper class="main" :class="{disabled: appStateSolving}" v-if="!appStateShowMeta">
           <rotators style="width: calc(3.25 * var(--cardSize))" :class="{pointoutparent: appStateFirstRunGuessingIndex === 4 &&
           isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}">
             <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateTray(1)">
@@ -767,7 +767,8 @@
             </spot>
           </parking>
         </wrapper>
-        <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}" v-if="appStateUsePortraitLayout">
+        <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}"
+          v-if="appStateUsePortraitLayout && !appStateShowMeta">
           <button class="scroller" :class="{disabled: appDataParkingScrollLeft <= 0}"
             @click="ScrollParking($event, 'right')" v-if="vsUseFocus">
             <icon class="chevronleft large"></icon>
@@ -809,8 +810,8 @@
         </wrapper>
       </app>
     </main>
-    <script src="helpers/console-enhancer.js?2.3.49" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.49" type="module"></script>
+    <script src="helpers/console-enhancer.js?2.3.50" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.50" type="module"></script>
   </body>
 
 </html>
