--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="styles/normalize.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.57" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.58" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css" media="screen" />
   </head>
 
@@ -51,12 +51,12 @@
             :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
         </preload>
         <link rel="stylesheet"
-          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.57' : ''"
+          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.58' : ''"
           media="screen" />
-        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.57' : ''" media="screen" />
-        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.57' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.58' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.58' : ''" media="screen" />
         <link rel="stylesheet"
-          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.57' : ''"
+          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.58' : ''"
           media="screen" />
         <splash :class="{hide: appStatePageHasLoaded}">
           <icon class="logo giant"></icon>
@@ -118,6 +118,7 @@
             <button class="small inline" @click="HandleNewGameClick">
               <icon class="edit"></icon>
               Create a Puzzle
+              <span></span>
             </button>
             <leftright>
               <button v-if="vsShowDaily" class="small inline" @click="ToggleShowDailyGames($event)">
@@ -128,16 +129,19 @@
               <button class="small inline" @click="ToggleShowGlobalCreated($event)">
                 <icon class="anon"></icon>
                 Anonymous
+                <span></span>
               </button>
             </leftright>
             <leftright>
               <button class="small inline" @click="ToggleShowTutorial($event)">
                 <icon class="gradcap"></icon>
                 How To
+                <span></span>
               </button>
               <button class="small inline" @click="ShowSettings($event)">
                 <icon class="settings"></icon>
                 Settings
+                <span></span>
               </button>
             </leftright>
             <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
@@ -814,8 +818,8 @@
         </wrapper>
       </app>
     </main>
-    <script src="helpers/console-enhancer.js?2.3.57" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.57" type="module"></script>
+    <script src="helpers/console-enhancer.js?2.3.58" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.58" type="module"></script>
   </body>
 
 </html>
