--- a/generate.html
+++ b/generate.html
@@ -29,12 +29,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="styles/normalize.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.58" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.59" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css" media="screen" />
   </head>
 
   <body>
-    <main id="app" style="display: none;">
+    <main id="app" style="opacity: 0;">
       <app v-cloak
         :class="{ai: isAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
         @pointerdown="HandleBodyPointerDown($event)"
@@ -51,12 +51,12 @@
             :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
         </preload>
         <link rel="stylesheet"
-          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.58' : ''"
+          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.59' : ''"
           media="screen" />
-        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.58' : ''" media="screen" />
-        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.58' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.59' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.59' : ''" media="screen" />
         <link rel="stylesheet"
-          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.58' : ''"
+          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.59' : ''"
           media="screen" />
         <splash :class="{hide: appStatePageHasLoaded}">
           <icon class="logo giant"></icon>
@@ -632,7 +632,8 @@
             </button>
           </controls>
         </wrapper>
-        <wrapper class="main" :class="{disabled: appStateSolving}" v-if="!appStateShowMeta">
+        <wrapper class="main" :class="{disabled: appStateSolving}"
+          v-if="!appStateShowMeta || (appStateShowMeta && isAIGenerating)">
           <rotators style="width: calc(3.25 * var(--cardSize))" :class="{pointoutparent: appStateFirstRunGuessingIndex === 4 &&
           isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}">
             <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateTray(1)">
@@ -648,7 +649,8 @@
             aria-hidden="true" maxlength="0" :disabled="appStateIsGuessing" tabindex="-1" id="parkingInput"
             style="opacity: 0; width: 0px; height: 0px; overflow: hidden; position: absolute; z-index: -1"
             v-model="appDataParkingInputValue" tabindex="-1" />
-          <ghost :style="{transform: 'translate(' + appDataGhostX + 'px, ' + appDataGhostY + 'px)'}">
+          <ghost :style="{transform: 'translate(' + appDataGhostX + 'px, ' + appDataGhostY + 'px)'}"
+            v-if="!isAIGenerating">
             <card class="selected" :style="{rotate: (appDataDraggedCard.rotation * 90) + 'deg'}"
               :class="{show: appStateIsDragging, empty: appDataDraggedCard.words.length === 0}">
               <words>
@@ -656,7 +658,7 @@
               </words>
             </card>
           </ghost>
-          <parking v-if="!appStateUsePortraitLayout"
+          <parking v-if="!appStateUsePortraitLayout && !isAIGenerating"
             :class="{pointout: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
             <spot v-for="(card, index) in leftParkingCards"
               :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: ((card.words.length !== 0 && isPlayerGuessing && appStateFirstRunGuessingIndex === 2 && !appStateIsDragging) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1))}">
@@ -736,7 +738,7 @@
               </spot>
             </cards>
           </tray>
-          <parking v-if="!appStateUsePortraitLayout">
+          <parking v-if="!appStateUsePortraitLayout && !isAIGenerating">
             <spot v-for="(card, index) in rightParkingCards"
               :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: ((card.words.length !== 0 && isPlayerGuessing && appStateFirstRunGuessingIndex === 2 && !appStateIsDragging) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1))}">
               <rotators>
@@ -768,7 +770,7 @@
           </parking>
         </wrapper>
         <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}"
-          v-if="appStateUsePortraitLayout && !appStateShowMeta">
+          v-if="appStateUsePortraitLayout && !appStateShowMeta && !isAIGenerating">
           <button class="scroller" :class="{disabled: appDataParkingScrollLeft <= 0}"
             @click="ScrollParking($event, 'right')" v-if="vsUseFocus">
             <icon class="chevronleft large"></icon>
@@ -810,8 +812,8 @@
         </wrapper>
       </app>
     </main>
-    <script src="helpers/console-enhancer.js?2.3.58" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.58" type="module"></script>
+    <script src="helpers/console-enhancer.js?2.3.59" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.59" type="module"></script>
   </body>
 
 </html>
