--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <flogo class="giant"></flogo>
           </header>
           <p>Hi, {{appDataPlayerCurrent.name}}!</p>
-          <button v-if="!isAuthenticated && hasPlayedAsBTGAccountBefore" @click="HandleLoginClick">Log in</button>
+          <button v-if="!isAuthenticated" @click="HandleLoginClick">Log in / Sign
+            up</button>
           <icon
             :class="{show: appStateIsGettingAnonymousGames || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
             style="position: relative" class="spinner"></icon>
@@ -262,11 +263,22 @@
                 style="font-family: var(--wordFont); max-width: unset; font-size: 50%; padding-top: var(--defaultGap); line-height: 150%;">
                 Craft word puzzles, send each other solutions, and discover how you and your friends connect! </p>
             </h2>
-            <message style="text-align: center; line-height: 150%;">
-              <greeting>Welcome!</greeting> What's your player name?
+            <message v-if="isAuthenticated" style="text-align: center; line-height: 150%;">
+              Welcome {{tempName}}!
             </message>
-            <input autocomplete="off" style="text-align: center" spellcheck="false" maxlength="14" id="nameInput"
-              placeholder="_ _ _ _ _ _ _ _ _ _ _ _ _" v-model="tempName" />
+
+            <message v-if="!isAuthenticated" style="text-align: center; line-height: 150%;">
+              <greeting>Welcome!</greeting>
+              What's your player name?
+            </message>
+            <input v-if="!isAuthenticated" autocomplete="off" style="text-align: center" spellcheck="false"
+              maxlength="14" id="nameInput" placeholder="_ _ _ _ _ _ _ _ _ _ _ _ _" v-model="tempName" />
+            <small v-if="!isAuthenticated">If you want to sync your preferences across devices, you can also use a Big
+              Tent Games account.
+              <a href="#" @click="HandleLoginClick">Log in / Sign
+                up</a>
+            </small>
+
             <!-- <checkbox v-if="isNotificationSupported && isSyncSupported && isPWAOnHomeScreen"
               :class="{on: tempUserWantsDailyReminder && Notification.permission === 'granted', disabled: !Notification.permission === 'granted'}"
               @click="ToggleTempUserWantsDailyReminder">
@@ -371,20 +383,11 @@
               </callout>
             </row>
             <small v-if="isAuthenticated && userEmail">Logged in with {{userEmail}}.</small>
-            <row v-if="!isAuthenticated">
-              <p>Player ID</p>
-              <callout>
-                <input spellcheck="false" onpointerup="this.select()" inputmode="numeric" type="number" pattern="\d*"
-                  v-model="tempID" oninput="if (this.value.length > 16) this.value = this.value.slice(0, 16);"
-                  maxlength="8" />
-              </callout>
+
+            <row v-if="isAuthenticated">
+              <a class="padded" @click="HandleLogOutClick">Log out</a>
             </row>
-            <small class="alertText" v-if="tempIDisInvalid">Your ID
-              must be 8 - 12 numbers long and not begin with 0.</small>
-            <small v-if="!isAuthenticated">To avoid connection issues when sharing game stats across different devices,
-              ensure this Player ID
-              matches
-              on all your browsers. Write this ID down before changing it.</small>
+
             <h3>Appearance</h3>
             <row>
               <hues>
